@@ -23,11 +23,13 @@ $('#CrudCode_model').bind('keyup change', function(){
 	<li> Add the Relation Widget when generating a foreign Key so that a DropDownList/CheckBox/ComboBox gets displayed </li>
 	<li> Add Yii::t() for every string occuring so that your Application is easily being able to be translated to other languages </li>
 	<li> Add a Jui Datepicker Widget for date Fields </li>
+	<li> Generate enum fields to a checkbox containing the possible values </li>
 	<li> Ajax Validation is enabled for all forms </li>
+	<li> Adds Cancel Button to create and update form </li>
+	<li> Form persistency in $_SESSION in conjunction with Relation Widget </li>
 	<li> Disabled the comparison Operator hint in the admin view </li>
 	<li> Remove all comments out of generated Code to avoid redundancy </li>
 	<li> Moved the submit button of Create and Update view to the corresponding views rather than to _form.php</li>
-	<li> Generate enum fields to a checkbox containing the possible values </li>
 </ul>
 
 <?php $form=$this->beginWidget('CCodeForm', array('model'=>$model)); ?>
